# HA-novastar-h

./: .gitignore  README.md  hacs.json  info.md  pyproject.toml  test_api.py
.github/: copilot-instructions.md
.github/workflows/: release.yml  validate.yml
custom_components/novastar_h/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  discovery.py  manifest.json  media_player.py  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/novastar_h/translations/: en.json
tests/: test_project_layout.py
